sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:9: error: type mismatch;
 found   : (Int, Int)
 required: Int
        return (i,j)
               ^SelectBaseball:11: error: type mismatch;
 found   : (Int, Int)
 required: Int
        return (0,0)
               ^SelectBaseball:6: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to getNombreBases-1) {
        ^